--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
             </a> 
             <!-- adicione o link https://www.thesprucecrafts.com/traditional-origami-crane-2540790 sobre como fazer o cisne à uma etiqueta href -->
             <!--Ajuste a src da imagem para 'crane.jpg' e, respectivamente, a width(largura) e height(altura) para 368 e 276 -->
+            <div class="line"></div> <iframe width="700" height="620" style="border: 0px;" src="https://www.thesprucecrafts.com/traditional-origami-crane-2540790"> </iframe>
+
 
             <h1>Tulipa</h1>
             <a href=""
